# so-shifts-slackbot

./: .env.example  .gitignore  HANDOFF.md  README.md  README.rst  SConstruct  pyproject.toml
.github/workflows/: daily-sync.yml
doc/: conf.py  index.rst  manifest.yaml
docs/: github-actions.md  setup.md  summary-tab-layout.md  workflow-builder-setup.md
python/lsst/so-shifts-slackbot/: __init__.py
so_shifts_slackbot/: cli.py  config.py  models.py
so_shifts_slackbot/io/: sheets.py  slack.py
tests/: test_sheets.py
