[project]
name = "so-shifts-slackbot"
version = "0.1.0"
description = "Reads the Unified Shift Schedule and updates Slack user groups with current shift assignments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gspread>=6.0",
    "google-auth-oauthlib>=1.2",
    "slack-sdk>=3.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
shifts-slackbot = "so_shifts_slackbot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["so_shifts_slackbot"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
